--- a/Turtle_/package.json
+++ b/Turtle_/package.json
@@ -22,9 +22,12 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
     "express": "^4.18.2",
+    "ngx-logger": "^5.0.12",
     "or": "^0.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typescript-logging": "^2.2.0",
+    "typescript-logging-category-style": "^2.2.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -40,6 +43,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.3.2"
+    "typescript": "~5.3.2",
+    "typescript-logging-node-channel": "^2.2.0"
   }
 }
